RESOLVED FIXED105175
[WinCairo] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=105175
Summary [WinCairo] Compile fix.
peavo
Reported 2012-12-17 07:01:09 PST
Some checks for USE(ACCELERATED_COMPOSITING) are missing.
Attachments
Patch (1.86 KB, patch)
2012-12-17 07:10 PST, peavo
no flags
Patch (1.79 KB, patch)
2012-12-18 05:11 PST, peavo
no flags
peavo
Comment 1 2012-12-17 07:10:40 PST
Simon Fraser (smfr)
Comment 2 2012-12-17 08:58:57 PST
Comment on attachment 179735 [details] Patch I'd prefer to keep #ifdefs out of cross-platform code. In this case I think it's better to to keep canSafelyEstablishAStackingContext() and code that calls it, and #ifdef the impl of needsCompositedScrolling() to always return false.
peavo
Comment 3 2012-12-18 05:11:55 PST
Simon Fraser (smfr)
Comment 4 2012-12-18 08:57:45 PST
Comment on attachment 179925 [details] Patch Much better, thanks!
WebKit Review Bot
Comment 5 2012-12-18 09:31:00 PST
Comment on attachment 179925 [details] Patch Clearing flags on attachment: 179925 Committed r138030: <http://trac.webkit.org/changeset/138030>
WebKit Review Bot
Comment 6 2012-12-18 09:31:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.