[WinCairo] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=105175

Patch by peavo@outlook.com <peavo@outlook.com> on 2012-12-18
Reviewed by Simon Fraser.

* rendering/RenderLayer.h: Compile fixes for USE(ACCELERATED_COMPOSITING) mismatch.

Canonical link: https://commits.webkit.org/123534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138030 268f45cc-cd09-0410-ab3c-d52691b4dbfc